Revert "Fix background color not covering whole page"
This reverts commit 9ef671dfe1d693acdde56e276a53a114833ebd1f.

--- a/assets/style.css
+++ b/assets/style.css
@@ -192,7 +192,9 @@ body {
   padding: 1rem;
   background-color: var(--bgColor-default);
   color: var(--fgColor-default);
-  height: 100vh;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 #container>div {
